--- a/modelling/Dockerfile
+++ b/modelling/Dockerfile
@@ -5,21 +5,21 @@ LABEL maintainer "Aquabiota Solutions AB <mapcloud@aquabiota.se>"
 # See aquabiota/realm-r-ver:latest for ENV variables
 # And aquabiota/realm-rstudio:latest  for adding new users and
 
-ENV DATA_DIR=$HOME_AQUA/data
-ENV AQUABIOTA_GIT_DIR=$HOME_AQUA/git
+ENV DATA_DIR=/home/aqua/data
+ENV AQUABIOTA_GIT_DIR=home/aqua/git
 
 
 # Create the workspace and workspace for data
-RUN mkdir -p $HOME_AQUA/data
+RUN mkdir -p /home/aqua/data
 # WORKDIR $WORKSPACE_DIR
-RUN mkdir -p $HOME_AQUA/git
+RUN mkdir -p /home/aqua/git
 # Ensure workspace belongs to user
 # Ensure access to .local
-RUN mkdir -p $HOME_AQUA/.local
+RUN mkdir -p /home/aqua/.local
 
-RUN chown -R $NB_USER:users $DATA_DIR && \
-    chown -R $NB_USER:users $AQUABIOTA_GIT_DIR && \
-    chown -R $NB_USER:users $HOME_AQUA/.local
+RUN chown -R aqua:aqua $DATA_DIR && \
+    chown -R aqua:aqua $AQUABIOTA_GIT_DIR && \
+    chown -R aqua:aqua /home/aqua/.local
 
 RUN install2.r --error dismo biomod2
 
