Added texlive xetex

--- a/verse/Dockerfile
+++ b/verse/Dockerfile
@@ -32,6 +32,7 @@ RUN apt-get update \
     texlive-humanities \
     texlive-latex-extra \
     texlive-science \
+    texlive.xetex \
     texinfo \
     ## just because
     less \
