refactored code. Added explicit volumes including bookdown

--- a/modelling/Dockerfile
+++ b/modelling/Dockerfile
@@ -8,20 +8,25 @@ LABEL maintainer "Aquabiota Solutions AB <mapcloud@aquabiota.se>"
 ENV DATA_DIR=/home/aqua/data
 ENV AQUABIOTA_GIT_DIR=home/aqua/git
 
-
 # Create the workspace and workspace for data
 RUN mkdir -p /home/aqua/data
 # WORKDIR $WORKSPACE_DIR
 RUN mkdir -p /home/aqua/git
+RUN mkdir -p /home/aqua/bookdown
 # Ensure workspace belongs to user
 # Ensure access to .local
 RUN mkdir -p /home/aqua/.local
 
-RUN chown -R aqua:aqua $DATA_DIR && \
+RUN install2.r --error dismo biomod2
+
+VOLUME /home/aqua/data
+VOLUME /home/aqua/git
+VOLUME /home/aqua/bookdown
+
+RUN chown -R aqua:aqua /home/aqua/data && \
     chown -R aqua:aqua $AQUABIOTA_GIT_DIR && \
     chown -R aqua:aqua /home/aqua/.local
-
-RUN install2.r --error dismo biomod2
+    chown -R aqua:aqua /home/aqua/bookdown
 
 # Making sure aqua is a sudoer
 # RUN adduser $NB_USER sudo && \
