--- a/datascience/Dockerfile
+++ b/datascience/Dockerfile
@@ -49,7 +49,7 @@ RUN conda remove -y spyder jupyter notebook
 RUN conda install -y bcrypt passlib && \
     conda install -y -c conda-forge libgdal geopy folium rasterio \
     ipyleaflet bqplot cmocean cartopy iris shapely pyproj \
-    fiona geopandas && \
+    fiona geopandas xmltodict && \
     conda update -y --all && conda clean -tipsy
 
 # installing jupyterlab from conda-forge
@@ -70,7 +70,8 @@ RUN conda install -y bcrypt passlib && \
 #RUN conda install -y gdal -c conda-forge
 # Installing pip requirements not available through conda
 # COPY pip-requirements.txt /tmp/
-RUN pip install s2sphere pyorient
+# untangle useful to while dealing with xml see: https://github.com/stchris/untangle
+RUN pip install s2sphere pyorient untangle
 #
 
 # make sure ipython will know where to find the git packages.
