--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -1,11 +1,21 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
+# MODIFIED FROM: https://github.com/rocker-org/rocker-versioned/blob/master/rstudio/3.5.1/Dockerfile
+# Previous realm: aquabiota/realm-r-ver
+# docker build -t aquabiota/realm-rstudio .
+# Next to follow: aquabiota/realm-tidyverse:latest
+
 FROM aquabiota/realm-r-ver:latest
 
 ARG RSTUDIO_VERSION
-ARG PANDOC_TEMPLATES_VERSION
-ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:-1.18} \
-    PATH=/usr/lib/rstudio-server/bin:$PATH
+ENV RSTUDIO_VERSION=${RSTUDIO_VERSION:-1.1.456}
+ARG S6_VERSION
+ENV S6_VERSION=${S6_VERSION:-v1.21.4.0}
+ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
+ENV PATH=/usr/lib/rstudio-server/bin:$PATH
+
+#ARG PANDOC_TEMPLATES_VERSION
+#ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:2.1.1}
 
 ## Download and install RStudio server & dependencies
 ## Attempts to get detect latest version, otherwise falls back to version given in $VER
@@ -20,10 +30,11 @@ RUN apt-get update \
     libssl-dev \
     lsb-release \
     psmisc \
+    procps \
     python-setuptools \
     sudo \
     wget \
-  && wget -O libssl1.0.0.deb http://ftp.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u6_amd64.deb \
+  && wget -O libssl1.0.0.deb http://ftp.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u8_amd64.deb \
   && dpkg -i libssl1.0.0.deb \
   && rm libssl1.0.0.deb \
   && RSTUDIO_LATEST=$(wget --no-check-certificate -qO- https://s3.amazonaws.com/rstudio-server/current.ver) \
@@ -31,16 +42,18 @@ RUN apt-get update \
   && wget -q http://download2.rstudio.org/rstudio-server-${RSTUDIO_VERSION}-amd64.deb \
   && dpkg -i rstudio-server-${RSTUDIO_VERSION}-amd64.deb \
   && rm rstudio-server-*-amd64.deb \
+  ## Symlink pandoc & standard pandoc templates for use system-wide
   && ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin \
   && ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin \
-  && wget https://github.com/jgm/pandoc-templates/archive/${PANDOC_TEMPLATES_VERSION}.tar.gz \
-  && mkdir -p /opt/pandoc/templates && tar zxf ${PANDOC_TEMPLATES_VERSION}.tar.gz \
+  && git clone https://github.com/jgm/pandoc-templates \
+  && mkdir -p /opt/pandoc/templates \
   && cp -r pandoc-templates*/* /opt/pandoc/templates && rm -rf pandoc-templates* \
   && mkdir /root/.pandoc && ln -s /opt/pandoc/templates /root/.pandoc/templates \
-  && rm ${PANDOC_TEMPLATES_VERSION}.tar.gz \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/ \
+  ## RStudio wants an /etc/R, will populate from $R_HOME/etc
   && mkdir -p /etc/R \
+  ## Write config files in $R_HOME/etc
   && echo '\n\
     \n# Configure httr to perform out-of-band authentication if HTTR_LOCALHOST \
     \n# is not set since a redirect to localhost may not work depending upon \
@@ -54,28 +67,42 @@ RUN apt-get update \
 	&& mkdir /home/aqua \
 	&& chown aqua:aqua /home/aqua \
 	&& addgroup aqua staff \
+  ## Prevent rstudio from deciding to use /usr/bin/R if a user apt-get installs a package
   &&  echo 'rsession-which-r=/usr/local/bin/R' >> /etc/rstudio/rserver.conf \
+  ## use more robust file locking to avoid errors when using shared volumes:
   && echo 'lock-type=advisory' >> /etc/rstudio/file-locks \
+  ## configure git not to request password each time
   && git config --system credential.helper 'cache --timeout=3600' \
   && git config --system push.default simple \
-  && wget -P /tmp/ https://github.com/just-containers/s6-overlay/releases/download/v1.11.0.1/s6-overlay-amd64.tar.gz \
+  ## Set up S6 init system
+  && wget -P /tmp/ https://github.com/just-containers/s6-overlay/releases/download/${S6_VERSION}/s6-overlay-amd64.tar.gz \
   && tar xzf /tmp/s6-overlay-amd64.tar.gz -C / \
   && mkdir -p /etc/services.d/rstudio \
+  && echo '#!/usr/bin/with-contenv bash \
+          \n## load /etc/environment vars first: \
+  		  \n for line in $( cat /etc/environment ) ; do export $line ; done \
+          \n exec /usr/lib/rstudio-server/bin/rserver --server-daemonize 0' \
+          > /etc/services.d/rstudio/run \
   && echo '#!/bin/bash \
-           \n exec /usr/lib/rstudio-server/bin/rserver --server-daemonize 0' \
-           > /etc/services.d/rstudio/run \
-   && echo '#!/bin/bash \
-           \n rstudio-server stop' \
-           > /etc/services.d/rstudio/finish
+          \n rstudio-server stop' \
+          > /etc/services.d/rstudio/finish \
+  && mkdir -p /home/aqua/.rstudio/monitored/user-settings \
+  && echo 'alwaysSaveHistory="0" \
+          \nloadRData="0" \
+          \nsaveAction="0"' \
+          > /home/aqua/.rstudio/monitored/user-settings/user-settings \
+  && chown -R aqua:aqua /home/aqua/.rstudio
 
 COPY userconf.sh /etc/cont-init.d/userconf
 
 ## running with "-e ADD=shiny" adds shiny server
 COPY add_shiny.sh /etc/cont-init.d/add
+COPY disable_auth_rserver.conf /etc/rstudio/disable_auth_rserver.conf
+COPY pam-helper.sh /usr/lib/rstudio-server/bin/pam-helper
 
 EXPOSE 8787
 
 ## automatically link a shared volume for kitematic users
-VOLUME /home/aqua/kitematic
+VOLUME /home/rstudio/kitematic
 
 CMD ["/init"]
