--- a/tidyverse/Dockerfile
+++ b/tidyverse/Dockerfile
@@ -24,7 +24,9 @@ RUN apt-get update -qq && apt-get -y --no-install-recommends install \
     remotes \
     selectr \
     caTools \
-    BiocManager
+    BiocManager \
+    rjson \
+    maxent
 
 ## Notes: Above install2.r uses --deps TRUE to get Suggests dependencies as well,
 ## dplyr and ggplot are already part of tidyverse, but listed explicitly to get their (many) suggested dependencies.
